Add initial contact me file

--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
-          <p>Every Website should be built with two primary goals. Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+          <p>Every Website should be built with two primary goals. Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible. <br><br><br> </p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Every Website should be built with two primary goals. Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+          <h2>Design what you want</h2>
+          <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send. <br><br> </p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Every Website should be built with two primary goals. Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+          <h2>Develop what you need</h2>
+          <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available. <br><br><br> </p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Every Website should be built with two primary goals. Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+          <h2>I can help</h2>
+          <p>I'm currently available for freelance work. If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
         </div>
       </div>
     </div>
@@ -156,7 +156,7 @@
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
         <p>I'm a success-driven, determined Web developer. I have experience using HTML CSS Javascript and PHP to build accessible component-based web pages and systems. Ability to deliver quality results while collaborating in rapidly changing work environments and team compositions. A passionate person willing to learn more technologies to become a better developer than I was yesterday. So determined and result oriented.</p>
-        <a href="#" class="cta">Download Resume</a>
+        <a href="contact-me.html" class="cta">Message me</a>
       </div>
     </div>
   </section>
