--- a/contact-me.html
+++ b/contact-me.html
@@ -11,7 +11,7 @@
     <section id="contact">
         <div class="contact container">
           <div>
-            <h1 class="section-title">Contact <span>Me</span></h1>
+            <h1 class="section-title">Message <span>Me</span></h1>
           </div>
           <div class="contact-items">
             <div class="contact-item">
