--- a/index.html
+++ b/index.html
@@ -206,16 +206,16 @@
       <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+          <a href="https://www.facebook.com/wekesaoliver2"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+          <a href="https://www.instagram.com/wekesaoliver1/"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="./img/img-3.png" alt="img" /></a>
+          <a href="https://twitter.com/wekesaoliver1"><img src="./img/img-3.png" alt="img" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="./img/img-4.png" /></a>
+          <a href="https://www.linkedin.com/in/wekesaoliver1/"><img src="./img/img-4.png" /></a>
         </div>
       </div>
       <p></p>
